--- a/index.html
+++ b/index.html
@@ -1,47 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.2/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css">
-<link rel="stylesheet" href="assets/css/style.css">
-<title>Giphy Search</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <title>Giphy Search</title>
 </head>
+
 <body>
 
+  <div class="sticky-top jumbotron-fluid p-1 text-center" id="button-area">
+  </div>
   <div class="container-fluid">
-    <div class="row">
-      <div class="col-12" id="button-area">
-
-      </div>
-    </div>
-    <div class="row">
+    <div class="row mt-3">
       <div class="col-md-3 col-12">
         <div id="search-bar-area" class="card">
-            <form id="search-form" class="card-body">
-                <p class="card-title">Add new search term</p>
-                <input type="text" id="search-input" class="form-control" placeholder="Enter Search Term">
-                <br>
-                <input id="add-search" type="submit" value="Submit">
-              </form>
+          <form id="search-form" class="card-body">
+            <p class="card-title">Add new search term</p>
+            <input type="text" id="search-input" class="form-control" placeholder="Enter Search Term">
+            <br>
+            <input id="add-search" type="submit" value="Submit" class="btn btn-outline-primary btn-block">
+          </form>
         </div>
       </div>
       <div class="col-md-9 col-12">
-        <div id="result-area">
+        <div id="result-area" class="row text-center">
 
         </div>
-        <div id="add-more" class="text-right display-4 px-5">
+        <div id="add-more" class="text-right display-4 px-5 text-info">
 
         </div>
       </div>
     </div>
   </div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.13.0/umd/popper.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.2/js/bootstrap.min.js"></script>
-<script src="assets/javascript/app.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.13.0/umd/popper.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.2/js/bootstrap.min.js"></script>
+  <script src="assets/javascript/app.js"></script>
 </body>
+
 </html>
